--- a/GameData/WildBlueIndustries/Buffalo/ModuleManagerPatches/MM_CLS.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/ModuleManagerPatches/MM_CLS.cfg
@@ -18,7 +18,7 @@
 	}
 }
 
-@PART[WBI_BuffaloAdapter,WBI_RCSModule,WBI_BuffaloGroundStabilizer]:HAS[!MODULE[ModuleConnectedLivingSpace]]:NEEDS[ConnectedLivingSpace]  
+@PART[WBI_BuffaloDrill,WBI_BuffaloSAS,WBI_BuffaloAdapter,WBI_RCSModule,WBI_BuffaloGroundStabilizer]:HAS[!MODULE[ModuleConnectedLivingSpace]]:NEEDS[ConnectedLivingSpace]  
 {
 	MODULE
 	{
