--- a/GameData/WildBlueIndustries/Buffalo/Parts/Utility/CrewCab.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Utility/CrewCab.cfg
@@ -221,6 +221,27 @@ PART
 		}
 	}
 
+	//Gives you the ability to go prospecting for rich deposits.
+	MODULE:NEEDS[Pathfinder]
+	{
+		name = WBIGoldStrike
+		showDebugLog = true
+		showGUI = true
+		prospectChance = 20
+		lodeStrikeSound = WildBlueIndustries/Pathfinder/Sounds/wereInTheMoney
+		moduleIsEnabled = false
+		showUpgradesInModuleInfo = true
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = CrewCabScienceUpgrade
+				description__ = The Crew Cabin now performs Geo-surveys
+				moduleIsEnabled = true
+			}
+		}
+	}
+
 	MODULE
 	{
 		name = WBIBiomeMultiExperiment
