--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/GoldDigger.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/GoldDigger.cfg
@@ -20,7 +20,7 @@ PART
 	subcategory = 0
 	title = Gold Digger Portable Mini-Drill
 	manufacturer = Kerbodyne / Wild Blue Industries
-	description = Also known as the Dancing Devil, the Gold Digger digs into the crust of planets or into asteroids to obtain core samples. These samples are then analyzed to determine the accuracy of resource scans. Comes with a free case of dust wipes.
+	description = Also known as the Dancing Devil, the Gold Digger digs into the crust of planets or into asteroids to obtain core samples. These samples are then analyzed to determine the accuracy of resource scans which will improve or hinder resource extraction rates for all drills in the biome. It can also serve as a mini resource drill in a pinch; when operated by a skilled scientist, you'll be able to improve its efficiency. Comes with a free case of dust wipes.
 	attachRules = 0,1,0,0,0
 
 	// --- standard part parameters ---
@@ -32,10 +32,10 @@ PART
 	crashTolerance = 7
 	maxTemp = 2000
 
-//	MODULE
-//	{
-//		name = ModuleOverheatDisplay
-//	}
+	MODULE
+	{
+		name = ModuleOverheatDisplay
+	}
 
 	MODULE
 	{
@@ -46,10 +46,16 @@ PART
 		ConverterName = Surface Harvester
 		StartActionName = Start Surface Harvester
 		StopActionName = Stop Surface Harvester
+		ToggleActionName = Toggle Surface Harvester
 		ImpactTransform = ImpactTransform
 		ImpactRange = 5
 		AutoShutdown = true
-		GeneratesHeat = false
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		SpecialistBonusBase = 0.05
+		ExperienceEffect = ScienceSkill
+		EfficiencyBonus = 1
+		GeneratesHeat = true
 		INPUT_RESOURCE
 		{
 			ResourceName = ElectricCharge
@@ -63,11 +69,6 @@ PART
 			key = 750 250
 			key = 1000 0
 		}		
-		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.2
-		SpecialistBonusBase = 0.05
-		Specialty = Scientist
-		EfficiencyBonus = 1
 		ThermalEfficiency 
 		{
 			key = 0 0.1
@@ -84,13 +85,13 @@ PART
 		DirectAttach = false
 		StartActionName = Start Asteroid Harvester 
 		StopActionName = Stop Asteroid Harvester
+		ToggleActionName = Toggle Asteroid Harvester
 		PowerConsumption = 0.3
-		Efficiency = 5
-		ImpactRange = 5
+		Efficiency = 1
+		ImpactRange = 1.5
 		ImpactTransform = ImpactTransform
-		UseSpecialistBonus = true
 		AutoShutdown = true
-		GeneratesHeat = false
+		GeneratesHeat = true
 		TemperatureModifier
 		{
 			key = 0 10000
@@ -102,7 +103,7 @@ PART
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
-		Specialty = Engineer
+		ExperienceEffect = ScienceSkill
 		EfficiencyBonus = 1
 		ThermalEfficiency 
 		{
@@ -116,8 +117,45 @@ PART
 
 	MODULE
 	{
+		name = WBIGoldStrikeConverter
+		ConverterName = GoldStrike
+		StartActionName = Start Lode Harvest
+		StopActionName = Stop Harvesting Lode
+		ToggleActionName = Start/Stop Lode Harvest
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		SpecialistBonusBase = 0.05
+		ExperienceEffect = ConverterSkill
+		 
+		INPUT_RESOURCE
+		{
+			ResourceName = Ore
+			Ratio = 0.3
+			FlowMode = STAGE_PRIORITY_FLOW
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 3
+		}
+	}
+
+	MODULE
+	{
+		name = WBIGoldStrike
+		showDebugLog = true
+		showGUI = false
+		prospectChance = 35 //Base chance is 10, but the drill has fewer core samples than chances to strike gold.
+		lodeStrikeSound = WildBlueIndustries/Pathfinder/Sounds/wereInTheMoney
+	}
+
+	MODULE
+	{
 		name = WBIDrillSwitcher
-		requiredSkill = Engineer
+		requiredSkill = DrillSkill
 		requiredResource = Equipment
 		reconfigureCost = 20
 	}
@@ -130,23 +168,23 @@ PART
 		moduleType = Drill
 	}	
 	
-//	MODULE
-//	{
-//		name = ModuleCoreHeat
-//		CoreTempGoal = 500					//Internal temp goal - we don't transfer till we hit this point
-//		CoreToPartRatio = 0.1				//Scale back cooling if the part is this % of core temp
-//		CoreTempGoalAdjustment = 0			//Dynamic goal adjustment
-//		CoreEnergyMultiplier = 0.1			//What percentage of our core energy do we transfer to the part
-//		HeatRadiantMultiplier = 0.25		//If the core is hotter, how much heat radiates?
-//		CoolingRadiantMultiplier = 0		//If the core is colder, how much radiates?
-//		HeatTransferMultiplier = 0			//If the part is hotter, how much heat transfers in?
-//		CoolantTransferMultiplier = 0.01	//If the part is colder, how much of our energy can we transfer?
-//		radiatorCoolingFactor = 1			//How much energy we pull from core with an active radiator?>= 1
-//		radiatorHeatingFactor = 0.05		//How much energy we push to the active radiator
-//		MaxCalculationWarp = 1000			//Based on how dramatic the changes are, this is the max rate of change
-//		CoreShutdownTemp = 1000				//At what core temperature do we shut down all generators on this part?
-//		MaxCoolant = 50					//Maximum amount of radiator capacity we can consume - 50 = 1 small
-//	}
+	MODULE
+	{
+		name = ModuleCoreHeat
+		CoreTempGoal = 500					//Internal temp goal - we don't transfer till we hit this point
+		CoreToPartRatio = 0.1				//Scale back cooling if the part is this % of core temp
+		CoreTempGoalAdjustment = 0			//Dynamic goal adjustment
+		CoreEnergyMultiplier = 0.1			//What percentage of our core energy do we transfer to the part
+		HeatRadiantMultiplier = 0.25		//If the core is hotter, how much heat radiates?
+		CoolingRadiantMultiplier = 0		//If the core is colder, how much radiates?
+		HeatTransferMultiplier = 0			//If the part is hotter, how much heat transfers in?
+		CoolantTransferMultiplier = 0.01	//If the part is colder, how much of our energy can we transfer?
+		radiatorCoolingFactor = 1			//How much energy we pull from core with an active radiator?>= 1
+		radiatorHeatingFactor = 0.05		//How much energy we push to the active radiator
+		MaxCalculationWarp = 1000			//Based on how dramatic the changes are, this is the max rate of change
+		CoreShutdownTemp = 1000				//At what core temperature do we shut down all generators on this part?
+		MaxCoolant = 50					//Maximum amount of radiator capacity we can consume - 50 = 1 small
+	}
 
 	MODULE
 	{
