--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
@@ -144,7 +144,7 @@ PART
 	MODULE
 	{
 		name = WBIDrillSwitcher
-		requiredSkill = Engineer
+		requiredSkill = DrillSkill
 		requiredResource = Equipment
 		reconfigureCost = 200
 	}
