--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/Claimjumper.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/Claimjumper.cfg
@@ -63,6 +63,34 @@ PATH_INDUSTRY
 
 	MODULE
 	{
+		name = WBIGoldStrikeConverter
+		ConverterName = GoldStrike
+		StartActionName = Start Lode Harvest
+		StopActionName = Stop Harvesting Lode
+		ToggleActionName = Start/Stop Lode Harvest
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		SpecialistBonusBase = 0.05
+		ExperienceEffect = ConverterSkill
+		 
+		INPUT_RESOURCE
+		{
+			ResourceName = Ore
+			Ratio = 1.5
+			FlowMode = STAGE_PRIORITY_FLOW
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 15
+		}
+	}
+
+	MODULE
+	{
 		name = WBIDrillOpsView
 	}
 
