--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/Clockworks.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/Clockworks.cfg
@@ -10,7 +10,7 @@ PATH_INDUSTRY
 	mass = 5
 	requiredResource = Equipment
 	requiredAmount = 2000
-	reconfigureSkill = ScienceSkill
+	reconfigureSkill = ConverterSkill
 	templateTags = Homestead
 	logoPanel = WildBlueIndustries/Pathfinder/Decals/Clockworks
 	glowPanel = WildBlueIndustries/Pathfinder/Decals/ClockworksGlow
