--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/GeologyLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/GeologyLab.cfg
@@ -25,6 +25,16 @@ PATH_HABITATION
 		name = ModuleBiomeScanner
 	}
 
+	//Gives you the ability to go prospecting for rich deposits.
+	MODULE
+	{
+		name = WBIGoldStrike
+		showDebugLog = true
+		showGUI = false
+		prospectChance = 30
+		lodeStrikeSound = WildBlueIndustries/Pathfinder/Sounds/wereInTheMoney
+	}
+
 	MODULE
 	{
 		name = WBIGeologyLab
