--- a/GameData/WildBlueIndustries/Buffalo/Parts/Command/BuffaloCab.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Command/BuffaloCab.cfg
@@ -221,7 +221,7 @@ PART
 }
 
 //ASET version of the cockpit (highly recommended!)
-@PART[WBI_BuffaloCab]:NEEDS[RasterPropMonitor]:NEEDS[ASET_PROPS]:NEEDS[ASET_Avionics]
+@PART[WBI_BuffaloCab]:NEEDS[ASET_PROPS]
 {
     @INTERNAL[WBI_BuffaloCabSpaceStock]
     {
