--- a/GameData/WildBlueIndustries/Buffalo/Parts/Utility/WheelJack.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Utility/WheelJack.cfg
@@ -19,7 +19,7 @@ PART
 	subcategory = 0
 	title = Wheel Jack
 	manufacturer = Wild Blue Industries
-	description = Not to be confused with a transforming robot that was voiced by a famous actor, the wheel jack serves as the foundation for building a Buffalo MSEV. Simply drop it on the ground, then grab it and bolt it into the ground. If you can run into the wheel jack and move it, then it's not bolted properly. Once bolted firmly into the ground, you can attach the chassis and other components of the MSEV. Once assembled, simply detach the wheel jack. To disassemble an MSEV, bolt a wheel jack to the bottom of a chassis before removing the MSEV's components. Remember, it takes an Engineer to assemble the MSEV, but anybody can stack boxes.
+	description = Not to be confused with a transforming robot that was voiced by a famous actor, the wheel jack serves as the foundation for building a Buffalo MSEV. Simply drop it on the ground, then grab it and bolt it into the ground. If you can run into the wheel jack and move it, then it's not bolted properly. Once bolted firmly into the ground, you can attach the chassis and other components of the MSEV. Once assembled, simply detonate the wheel jack. To disassemble an MSEV, bolt a wheel jack to the bottom of a chassis before removing the MSEV's components. Remember, it takes an Engineer to assemble the MSEV, but anybody can stack boxes.
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,1,1
@@ -45,6 +45,11 @@ PART
 		allowStaticAttach = 1
 		staticAttachBreakForce = 40
 	}
+
+//	MODULE
+//	{
+//		name = WBISelfDestruct
+//	}
 
 	DRAG_CUBE
 	{
