--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_CLS.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_CLS.cfg
@@ -6,3 +6,13 @@
         passable = true
     }
 }
+
+@PART[WBI_Spyglass]:HAS[!MODULE[ModuleConnectedLivingSpace]]:NEEDS[ConnectedLivingSpace]
+{
+    MODULE
+    {
+        name = ModuleConnectedLivingSpace
+        passable = true
+	passableWhenSurfaceAttached = true
+    }
+}
