--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_USILS.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_USILS.cfg
@@ -229,6 +229,86 @@
 
 }
 
+GREENHOUSE:NEEDS[TacLifeSupport]
+{
+	author = Angel-125
+	name = PerpetualGreenhouse
+	title = Perpetual Greenhouse
+	description = The Continually Regenerating Agricultural Product greenhouse is able to constantly produce food if supplied with the right nutrients. Apparently the agricultural product tastes like wood.
+	includeModuleInfo = true
+	mass = 1.5
+	requiredResource = Equipment
+	requiredAmount = 600
+	reconfigureSkill = ScienceSkill
+	logoPanel = WildBlueIndustries/Pathfinder/Decals/Greenhouse
+	glowPanel = WildBlueIndustries/Pathfinder/Decals/GreenhouseGlow
+	toolTip = This greenhouse produces food continually instead of after a set growth period.
+	toolTipTitle = Your First Greenhouse!
+	capacityFactor = 1.0
+
+	MODULE
+	{
+		name = ModuleResourceConverter
+		ConverterName = Greenhouse
+		StartActionName = Start Grenhouse
+		StopActionName = Stop Greenhouse
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		ExperienceEffect = ScienceSkill
+		EfficiencyBonus = 1
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 5
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = Mulch
+			Ratio = 0.0024
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = Fertilizer
+			Ratio = 0.0024
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = Supplies
+			Ratio = 0.00264
+		}
+	}
+
+	RESOURCE
+	{
+		name = Mulch
+		amount = 1000
+		maxAmount = 1000
+		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name = Fertilizer
+		amount = 1000
+		maxAmount = 1000
+		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name = Supplies
+		amount = 1000
+		maxAmount = 1000
+		isTweakable = true
+	}
+}
+
 @PATH_INDUSTRY[CropWorks]:NEEDS[USILifeSupport]
 {
 	MODULE
