--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Conestoga.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Conestoga.cfg
@@ -227,9 +227,9 @@ PART
 	{
 		name = WBILight
 		animationName = ConestogaLights
-		startEventGUIName = Headlight On
-		endEventGUIName = Headlight Off
-		actionGUIName = Toggle Headlight
+		startEventGUIName = Lights On
+		endEventGUIName = Lights Off
+		actionGUIName = Lights On/Off
 		red = 1
 		green = 1
 		blue = 1
