--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/GeologyLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/GeologyLab.cfg
@@ -25,6 +25,32 @@ PATH_HABITATION
 		name = ModuleBiomeScanner
 	}
 
+	MODULE
+	{
+		name = ModuleResourceScanner
+		MaxAbundanceAltitude = 5000
+		RequiresUnlock = true
+		ScannerType = 0
+		ResourceName = Ore
+	}
+
+	MODULE
+	{
+		name = ModuleKerbNetAccess
+		EnhancedSituationMask = 7
+		EnhancedMinimumFoV = 160
+		EnhancedMaximumFoV = 179.5
+		MinimumFoV = 5
+		MaximumFoV = 90
+		AnomalyDetection = 0.75
+		DISPLAY_MODES
+		{
+			Mode = Resources
+			Mode = Biome
+			Mode = Terrain
+		}
+	}
+
 	//Gives you the ability to go prospecting for rich deposits.
 	MODULE
 	{
@@ -37,7 +63,57 @@ PATH_HABITATION
 
 	MODULE
 	{
-		name = WBIGeologyLab
+		name = WBIModuleScienceExperiment
+		experimentID = WBIEmptyExperiment
+		defaultExperiment = WBIEmptyExperiment
+		experimentActionName = Do Nothing
+		resetActionName = Reset Nothing
+		useStaging = False
+		useActionGroups = True
+		hideUIwhenUnavailable = True
+		xmitDataScalar = 0.25
+		dataIsCollectable = False
+		interactionRange = 1.2
+		rerunnable = False
+		resettable = False
+		usageReqMaskInternal = 1
+		usageReqMaskExternal = 8
+	}
+
+	MODULE
+	{
+		name = WBIModuleScienceExperiment
+		experimentID = WBIEmptyExperiment
+		defaultExperiment = WBIEmptyExperiment
+		experimentActionName = Do Nothing
+		resetActionName = Reset Nothing
+		useStaging = False
+		useActionGroups = True
+		hideUIwhenUnavailable = True
+		xmitDataScalar = 0.25
+		dataIsCollectable = False
+		interactionRange = 1.2
+		rerunnable = False
+		resettable = False
+		usageReqMaskInternal = 1
+		usageReqMaskExternal = 8
+	}
+
+	//Improve production efficiencies in the local biome through geology research.
+	MODULE
+	{
+		name = WBIExperimentLab
+		opsButtonName = Geoscience
+
+		defaultExperiment = WBIEmptyExperiment
+		canCreateExperiments = true
+		creationTags = geologyLab
+		checkCreationResources = false
+		experimentCreationSkill = ScienceSkill
+		defaultCreationResource = ResearchKits
+		minimumCreationAmount = 5.0
+		checkCreationResources = true
+
 		ConverterName = Geology Lab
 		StartActionName = Start Geology
 		StopActionName = Stop Geology
@@ -48,11 +124,12 @@ PATH_HABITATION
 		SpecialistBonusBase = 0.05
 		ExperienceEffect = ScienceSkill
 		EfficiencyBonus = 1
-		hoursPerCycle = 4 //This is actually exponential based on an internal formula
+		hoursPerCycle = 6
 		minimumSuccess = 60
 		minimumSuccess = 5
 		criticalSuccess = 95
 		criticalFail = 2
+		sciencePerCycle = 1.0
 		repairSkill = ScienceSkill
 		repairResource = Equipment
 		repairAmount = 50
@@ -66,8 +143,21 @@ PATH_HABITATION
 		INPUT_RESOURCE
 		{
 			ResourceName = ResearchKits
-			Ratio = 0.001
+			Ratio = 0.00027777
 		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = CoreSamples
+			Ratio = 0.00005
+			DumpExcess = true
+		}
+	}
+
+	//Unlock a biome, show abundance. Needs ModuleBiomeScanner.
+	MODULE
+	{
+		name = WBIPathfinderLab
 	}
 
 	MODULE
@@ -148,5 +238,12 @@ PATH_HABITATION
 		name = RareMetals
 		amount = 500
 		maxAmount = 500
+	}
+
+	RESOURCE
+	{
+		name = CoreSamples
+		amount = 36
+		maxAmount = 36
 	}
 }
