--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/WatneyChemLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/WatneyChemLab.cfg
@@ -233,7 +233,14 @@ PATH_SCIENCE
 		OUTPUT_RESOURCE
 		{
 			ResourceName = LqdHydrogen
-			Ratio = 0.7847
+			Ratio = 0.78455
+			DumpExcess = true
+		}
+	
+		OUTPUT_RESOURCE
+		{
+			ResourceName = LqdDeuterium
+			Ratio = 0.00015
 			DumpExcess = true
 		}
 	}
@@ -274,7 +281,14 @@ PATH_SCIENCE
 		OUTPUT_RESOURCE
 		{
 			ResourceName = LqdHydrogen
-			Ratio = 0.7847
+			Ratio = 0.78455
+			DumpExcess = true
+		}
+	
+		OUTPUT_RESOURCE
+		{
+			ResourceName = LqdDeuterium
+			Ratio = 0.00015
 			DumpExcess = true
 		}
 	}
